whitespace bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,3 @@
-main {
-  margin: 0 auto;
-}
-
-th,
-td {
-  padding: 1rem;
-  border: 1px solid #d1d5dc;
-}
-
-th {
-  white-space: wrap;
-  background-color: #ccc;
-  border: 1px solid black;
-  color: black;
-  letter-spacing: 2px;
-}
-
-td {
-  white-space: nowrap;
-  letter-spacing: 1px;
-  text-transform: capitalize;
-}
-
-tbody td,
-thead {
-  text-align: left;
-}
-
 table tr:nth-child(even) {
   background: #f0f0f0;
 }
